Route Config added

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -158,8 +158,22 @@
                                         </div>
                                         <div id="Request" class="panel-collapse collapse">
                                             <div class="panel-body custom-panel-body">
-                                                  <left-menu label="LoadRequest" ui-sref="loadRequests"></left-menu>
+                                                <left-menu label="LoadRequest" ui-sref="loadRequests"></left-menu>
                                                 <left-menu label="Send SMS" ui-sref="sendSMS"></left-menu>
+                                            </div>
+                                        </div>
+                                    </div>
+                                  <div class="panel panel-default custom-panel-default custom-panel">
+                                        <div class="panel-heading">
+                                            <h4 class="panel-title">
+                                                <a data-toggle="collapse" data-parent="#accordion" href="#routeConfig"
+                                                   class="left-menu-anchor">
+                                                     Route Config</a>
+                                            </h4>
+                                        </div>
+                                        <div id="routeConfig" class="panel-collapse collapse">
+                                            <div class="panel-body custom-panel-body">
+                                                <left-menu label="routeConfig" ui-sref="routeConfig"></left-menu>
                                             </div>
                                         </div>
                                     </div>
