--- a/client/views/partials/admin/services/addNewAccount.html
+++ b/client/views/partials/admin/services/addNewAccount.html
@@ -13,7 +13,15 @@
                             <input type="text" class="form-control custom-form-control"
                                    ng-model="accountDetails.userName" ng-change="checkAvailablity()"/>
                             <label class="focus-effect-for-input">User Name*</label>
+
                         </div>
+                        <span ng-if="availableStatus" class="availableStatus">
+                               <small style="position: absolute;top: 40px; padding-left: 50px;">
+                                   {{availableStatusError}}</small></span>
+                        <span ng-if="!availableStatus" class="availableStatus">
+                               <small style="color: red;position: absolute;top: 40px;padding-left: 50px;">
+                                   {{availableStatusError}}</small>
+                           </span>
                     </div>
                     <div class="col-sm-6">
                         <div class="form-group">
