--- a/client/views/partials/gps/trackView.html
+++ b/client/views/partials/gps/trackView.html
@@ -122,6 +122,9 @@
                         <li class="list-group-item">
                             Average Speed : <b>{{averageSpeed | number : 2}}</b>
                         </li>
+                        <li class="list-group-item">
+                            Odometer : <b>{{totalDistance | number:0}}</b>
+                        </li>
 
                         <li class="list-group-item">
                             Total Time : <b>{{timeTravelled | number : 2}}</b>
