--- a/client/views/partials/gps/listView.html
+++ b/client/views/partials/gps/listView.html
@@ -47,8 +47,7 @@
                         <!--<td data-title="'Fuel'" sortable="'totalPayment'" class="clickable-item col-sm-1">
                             NA
                         </td>-->
-                        <td data-title="'Load'" sortable="'totalPayment'" class="clickable-item col-sm-2">
-                         <input type="checkbox" /> Looking For Load
+                        <td data-title="'Status'"  class="clickable-item col-sm-2">{{truck.status}}
                         </td>
                         <!--<td data-title="'Action'" sortable="'totalPayment'" class="clickable-item col-sm-1">
                             <i class="fa fa-edit" style="font-size: 20px;"></i>
