--- a/client/views/partials/admin/services/gpsDevices.html
+++ b/client/views/partials/admin/services/gpsDevices.html
@@ -78,7 +78,7 @@
                     {{device.assignedTo.displayName}}
                 </td>
                 <td data-title="'Status'" sortable="'isDamaged'" class="clickable-item">
-                    {{device.isDamaged == '0' && 'working' || 'Not working'}}
+                    {{device.isActive == '0' && 'working' || 'Not working'}}
                 </td>
                 <td data-title="'Edit/Delete'" sortable="'imei'" class="clickable-item">
                     <a href="#" ui-sref="services.editGpsDevice({device: device._id})" class="edit_icon">
