--- a/client/views/partials/gps/trackView.html
+++ b/client/views/partials/gps/trackView.html
@@ -96,7 +96,7 @@
                     <input type="button" ng-click="animate()" class="btn btn-danger" value="Play"/>
                     <input type="button" ng-click="stopAnimation()" class="btn btn-danger" value="Stop"/>
                     <input type="button" ng-click="downloadReport()" class="btn btn-danger" value="Download">
-                    <div class="checkbox" ng-show="distance">
+                    <div class="checkbox">
                         <label>
                             <input type="checkbox" ng-change="renderStops()"
                                    ng-model="truckTrackingParams.showOnlyStops">
