--- a/client/views/index.html
+++ b/client/views/index.html
@@ -117,6 +117,7 @@
                                                  <left-menu label="Trucks" ui-sref="trucks"></left-menu>
                                                 <left-menu label="Drivers" ui-sref="drivers"></left-menu>
                                                 <left-menu label="Parties" ui-sref="parties"></left-menu>
+                                                <left-menu label="Inventories" ui-sref="inventories"></left-menu>
                                             </div>
                                         </div>
                                     </div>
