--- a/client/views/partials/inventories/inventoriesList.html
+++ b/client/views/partials/inventories/inventoriesList.html
@@ -12,9 +12,9 @@
                 <td data-title="'Inventory Id'" sortable="'id'" class="clickable-item">
                     {{inventory.id}}
                 </td>
-                <td data-title="'Fixed Date'" sortable="'date'" class="clickable-item">
-                    {{inventory.date | date:'dd-MM-yyyy'}}
-                </td>
+               <!-- <td data-title="'Supplier'" sortable="'supplier'" class="clickable-item">
+                    {{inventory.partyId}}
+                </td>-->
                 <td data-title="'Action'" class="col-sm-2">
                     <a href="#" class="btn" ng-click="goToEditPage(inventory._id)">
                         <span class="glyphicon glyphicon-pencil"></span></a>
