--- a/client/views/partials/gps/listView.html
+++ b/client/views/partials/gps/listView.html
@@ -29,8 +29,9 @@
                             <a href="#"></a>
                             {{truck.attrs.latestLocation.createdAt |date : "dd/MM/y HH:mm" }}
                         </td>
-                        <td data-title="'Vehicle Num'" sortable="'registrationNo'" class="clickable-item col-sm-1"  ng-click="trackView(truck.registrationNo)">
-                            <a href="#">{{truck.registrationNo | uppercase}}</a>
+                        <td data-title="'Vehicle Num'" sortable="'registrationNo'" class="clickable-item col-sm-1">
+                            <a href="#" ng-if="truck.attrs.latestLocation" ng-click="trackView(truck.registrationNo)">{{truck.registrationNo | uppercase}}</a>
+                            <span ng-if="!truck.attrs.latestLocation">{{truck.registrationNo | uppercase}}</span>
                         </td>
                         <td data-title="'Location'" sortable="'address'" class="clickable-item col-sm-2">
                             {{truck.attrs.latestLocation.address}}
