--- a/client/views/index.html
+++ b/client/views/index.html
@@ -127,12 +127,11 @@
                                         <div id="Maintanance" class="panel-collapse collapse">
                                             <div class="panel-body custom-panel-body">
                                                 <left-menu label="Expenses" ui-sref="expenses"></left-menu>
+                                                <left-menu label="Jobs" ui-sref="jobs"></left-menu>
                                             </div>
                                         </div>
                                     </div>
-
-
-                                   <div class="panel panel-default custom-panel-default custom-panel">
+                                 <div class="panel panel-default custom-panel-default custom-panel">
                                         <div class="panel-heading">
                                             <h4 class="panel-title">
                                                 <a data-toggle="collapse" data-parent="#accordion" href="#Transactions"
