--- a/client/views/index.html
+++ b/client/views/index.html
@@ -128,6 +128,7 @@
                                             <div class="panel-body custom-panel-body">
                                                 <left-menu label="Expenses" ui-sref="expenses"></left-menu>
                                                 <left-menu label="Jobs" ui-sref="jobs"></left-menu>
+                                                <left-menu label="Reminders" ui-sref="reminders"></left-menu>
                                             </div>
                                         </div>
                                     </div>
