--- a/client/views/partials/inventories/add-editInventory.html
+++ b/client/views/partials/inventories/add-editInventory.html
@@ -95,3 +95,18 @@
         </div>
     </div>
 </div>
+<script type="text/ng-template" id="viewS3Image.html">
+    <div class="modal-header">
+        <h3 class="modal-title">Job Image</h3>
+    </div>
+    <div class="modal-body">
+        <div class="row">
+            <div class="col-sm-10 popup-center">
+                <img src="{{path}}" width="100%">
+            </div>
+        </div>
+    </div>
+    <div class="modal-footer">
+        <button class="btn btn-danger" type="button" ng-click="close();">Close</button>
+    </div>
+</script>
