Remainder badge added

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -48,6 +48,11 @@
                 <li ng-class="{selected: activeTab === 'settings'}"><a href="#" ui-sref="gpsSettings"><img
                         src="images/settings.png"><span>Settings</span></a></li>
                 <li><a href="#">  <img src="images/notifications.png"><span>Notifications</span></a></li>
+                <li class="pos-relative">
+                    <a href="#"> <i class="fa fa-bell-o" ></i>
+                        <span>Remainders</span> </a>
+                    <div class="erp-badges">10</div>
+                </li>
                 <!--<li ng-class="{selected: activeTab === 'Analytics'}"><a href="#" ui-sref="analyticsReports"><img-->
                 <!--src="images/settings.png"><span>Analytics</span></a></li>-->
 
