--- a/client/views/index.html
+++ b/client/views/index.html
@@ -49,9 +49,9 @@
                         src="images/settings.png"><span>Settings</span></a></li>
                 <li><a href="#">  <img src="images/notifications.png"><span>Notifications</span></a></li>
                 <li class="pos-relative">
-                    <a href="#"> <i class="fa fa-bell-o" ></i>
+                    <a href="#" ui-sref="reminders"> <i class="fa fa-bell-o" ></i>
                         <span>Remainders</span> </a>
-                    <div class="erp-badges">10</div>
+                    <div class="erp-badges"><span>{{remainder}}</span></div>
                 </li>
                 <!--<li ng-class="{selected: activeTab === 'Analytics'}"><a href="#" ui-sref="analyticsReports"><img-->
                 <!--src="images/settings.png"><span>Analytics</span></a></li>-->
