--- a/client/views/partials/reminders/remindersList.html
+++ b/client/views/partials/reminders/remindersList.html
@@ -12,6 +12,9 @@
                 <td data-title="'Reminder Text'" sortable="'reminderText'" class="clickable-item">
                     {{reminder.reminderText}}
                 </td>
+                <td data-title="'Status'" sortable="'status'" class="clickable-item">
+                    {{reminder.status}}
+                </td>
                 <td data-title="'Action'" class="col-sm-2">
                     <a href="#" class="btn" ng-click="goToEditPage(reminder._id)">
                         <span class="glyphicon glyphicon-pencil"></span></a>
