--- a/client/views/index.html
+++ b/client/views/index.html
@@ -51,7 +51,7 @@
                 <li class="pos-relative">
                     <a href="#" ui-sref="reminders"> <i class="fa fa-bell-o" ></i>
                         <span>Remainders</span> </a>
-                    <div class="erp-badges"><span>{{remainder}}</span></div>
+                    <div class="erp-badges" ng-if="remainder > 0"><span>{{remainder}}</span></div>
                 </li>
                 <!--<li ng-class="{selected: activeTab === 'Analytics'}"><a href="#" ui-sref="analyticsReports"><img-->
                 <!--src="images/settings.png"><span>Analytics</span></a></li>-->
@@ -203,7 +203,7 @@
 
 <!--bower scripts-->
 <script src="dist/components/components.min.js"></script>
-<script src="http://maps.google.com/maps/api/js?key=AIzaSyC3JuGIZkNVnzrOthyMWEWf3zA0J-aui0M&libraries=places"></script>
+<script src="http://maps.google.com/maps/api/js?key=AIzaSyCwYpYffxQe_lDI7PxN9GUPlyKJUQ-CUO4"></script>
 <!--Date Time Picker --->
 <script src="components/bootstrap-ui-datetime-picker/dist/datetime-picker.min.js"></script>
 <!--app-->
