--- a/client/views/partials/Jobs/add_editJob.html
+++ b/client/views/partials/Jobs/add_editJob.html
@@ -88,6 +88,38 @@
             </div>
         </div>
     </div>
+    <div ng-if="records.length > 0">
+        <div class="col-sm-6 col-xs-12 mt-10">
+            <div class="col-xs-12 pall-zero mb-10">
+                <h2 class="table-name">Records:</h2>
+            </div>
+            <div class="mt-10">
+                <table class="table table-bordered table-striped table-condensed table-hover"
+                       ng-table="studentParams">
+                    <tr ng-repeat="record in records " style="text-align: center;">
+                        <td data-title="'Vehicle'"  class="clickable-item">
+                            {{job.vehicle.registrationNo}}
+                        </td>
+                        <td data-title="'Last Job Date'" class="clickable-item">
+                            {{record.date | date:'dd-MM-y'}}
+                        </td>
+                        <td data-title="'Inventory'" class="clickable-item">
+                            {{record.inventory.name}}
+                        </td>
+                        <td data-title="'milege'" class="clickable-item">
+                            {{record.milege}}
+                        </td>
+                        <td data-title="'Job Type'" class="clickable-item">
+                            {{record.type.jobName}}
+                        </td>
+                    </tr>
+                    <tr ng-if="!records || records === 0">
+                        <td colspan="10">No Records exist.</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </div>
     <div class="col-xs-12">
         <div class="col-xs-4 mtb-25 sub-can">
             <button type="submit" class="btn can" ng-click="cancel()">Cancel</button>
