--- a/client/views/partials/reminders/addReminder.html
+++ b/client/views/partials/reminders/addReminder.html
@@ -34,8 +34,24 @@
                 </ul>
             </div>
         </div>
+
     </div>
-        <div class="col-xs-12">
+    <div ng-if="job.vehicle && job.inventory">
+        <div class="col-sm-6 col-xs-12 mt-10">
+            <div class="col-xs-12 pall-zero mb-10">
+                <h2 class="table-name">Job Details:</h2>
+            </div>
+            <div class="mt-10">
+                <table class="table table-bordered table-striped table-condensed table-hover">
+                    <tr ng-repeat="(x,y) in job" style="text-align: center;">
+                        <td>{{x}}</td>
+                        <td>{{y}}</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </div>
+    <div class="col-xs-12">
         <div class="col-xs-4 mtb-25 sub-can">
             <button type="submit" class="btn can" ng-click="cancel()">Cancel</button>
             <button type="submit" class="btn can last" ng-click="AddorUpdateReminder()">Submit</button>
