--- a/client/views/index.html
+++ b/client/views/index.html
@@ -203,7 +203,7 @@
 
 <!--bower scripts-->
 <script src="dist/components/components.min.js"></script>
-<script src="http://maps.google.com/maps/api/js?key=AIzaSyC3JuGIZkNVnzrOthyMWEWf3zA0J-aui0M&libraries=places"></script>
+<script src="http://maps.google.com/maps/api/js?v=3&key=AIzaSyC3JuGIZkNVnzrOthyMWEWf3zA0J-aui0M&libraries=places"></script>
 <!--Date Time Picker --->
 <script src="components/bootstrap-ui-datetime-picker/dist/datetime-picker.min.js"></script>
 <!--app-->
