--- a/client/views/partials/reminders/addReminder.html
+++ b/client/views/partials/reminders/addReminder.html
@@ -36,16 +36,24 @@
         </div>
 
     </div>
-    <div ng-if="job.vehicle && job.inventory">
+    <div ng-if="reminder.vehicle">
         <div class="col-sm-6 col-xs-12 mt-10">
             <div class="col-xs-12 pall-zero mb-10">
                 <h2 class="table-name">Job Details:</h2>
             </div>
             <div class="mt-10">
                 <table class="table table-bordered table-striped table-condensed table-hover">
-                    <tr ng-repeat="(x,y) in job" style="text-align: center;">
-                        <td>{{x}}</td>
-                        <td>{{y}}</td>
+                    <tr style="text-align: center;">
+                        <td>Date</td>
+                        <td>{{reminder.refId.date| date}}</td>
+                    </tr>
+                    <tr style="text-align: center;">
+                        <td>Vehicle Number</td>
+                        <td>{{reminder.vehicle.registrationNo}}</td>
+                    </tr>
+                    <tr style="text-align: center;">
+                        <td>Milage</td>
+                        <td>{{reminder.refId.milege}}</td>
                     </tr>
                 </table>
             </div>
