--- a/client/views/index.html
+++ b/client/views/index.html
@@ -118,6 +118,9 @@
                                                 <left-menu label="Drivers" ui-sref="drivers"></left-menu>
                                                 <left-menu label="Parties" ui-sref="parties"></left-menu>
                                                 <left-menu label="Inventories" ui-sref="inventories"></left-menu>
+                                                <left-menu label="Users" ui-sref="users"></left-menu>
+                                                <left-menu label="UsersList" ui-sref="usersEdit"></left-menu>
+
                                             </div>
                                         </div>
                                     </div>
