--- a/client/views/partials/Jobs/add_editJob.html
+++ b/client/views/partials/Jobs/add_editJob.html
@@ -8,15 +8,15 @@
 
         <div class="form-group col-xs-12">
             <div class="styling-input-list">
-                    <ui-select ng-model="job.vehicle" theme="select2"
-                               title="Choose a Truck" append-to-body="true">
-                        <ui-select-match class="form-control custom-form-control">
-                            {{$select.selected.registrationNo || truckRegNo}}
-                        </ui-select-match>
-                        <ui-select-choices repeat="truck in trucks | propsFilter: {registrationNo: $select.search}">
-                            <div ng-bind-html="truck.registrationNo | highlight: $select.search"></div>
-                        </ui-select-choices>
-                    </ui-select>
+                <ui-select ng-model="job.vehicle"  ng-change="getRecords(job.vehicle)" theme="select2"
+                           title="Choose a Truck" append-to-body="true">
+                    <ui-select-match class="form-control custom-form-control">
+                        {{$select.selected.registrationNo || truckRegNo}}
+                    </ui-select-match>
+                    <ui-select-choices repeat="truck in trucks | propsFilter: {registrationNo: $select.search}">
+                        <div ng-bind-html="truck.registrationNo | highlight: $select.search"></div>
+                    </ui-select-choices>
+                </ui-select>
                 <label class="focus-effect-for-input">Vehicle*</label>
             </div>
         </div>
@@ -43,7 +43,7 @@
                         </span>
                 <select class="form-control custom-form-control" ng-model="job.type">
                     <option value="" selected>Select Job Type</option>
-                    <option ng-repeat="e in expenses" value="{{e._id}}">{{e.expenseName}}</option>
+                    <option ng-repeat="e in expenses" value="{{e._id}}">{{e.jobName}}</option>
                     <option value="others">Others</option>
                 </select>
             </div>
@@ -51,10 +51,40 @@
         <div ng-show="job.type=='others'">
             <div class="form-group col-xs-12">
                 <div class="">
-                    <input type="text" ng-model="job.expenseName"
+                    <input type="text" ng-model="job.jobName"
                            class="form-control custom-form-control" id="name" placeholder="Job Type">
                 </div>
             </div>
+        </div>
+        <div>
+                <div class="col-xs-12 pall-zero mb-10">
+                    <h2 class="table-name">Previous Jobs:</h2>
+                </div>
+                <div class="mt-10">
+                    <table class="table table-bordered table-striped table-condensed table-hover"
+                           ng-table="studentParams">
+                        <tr ng-repeat="record in records " style="text-align: center;">
+                            <td data-title="'Vehicle'"  class="clickable-item">
+                                {{vehicle}}
+                            </td>
+                            <td data-title="'Last Job Date'" class="clickable-item">
+                                {{record.date | date:'dd-MM-y'}}
+                            </td>
+                            <td data-title="'Inventory'" class="clickable-item">
+                                {{record.inventory.name}}
+                            </td>
+                            <td data-title="'milege'" class="clickable-item">
+                                {{record.milege}}
+                            </td>
+                            <td data-title="'Job Type'" class="clickable-item">
+                                {{record.type.jobName}}
+                            </td>
+                        </tr>
+                        <tr ng-if="!records.length || records.length === 0">
+                            <td colspan="10">No Records exist.</td>
+                        </tr>
+                    </table>
+                </div>
         </div>
     </div>
     <div class="col-sm-6 col-xs-12 mt-10">
@@ -66,7 +96,7 @@
         </div>
         <div class="form-group col-xs-12">
             <date-picker  ng-model="job.reminderDate"
-                             class="'custom-form-control'" placeholder="'Reminder Date'"></date-picker>
+                          class="'custom-form-control'" placeholder="'Reminder Date'"></date-picker>
         </div>
         <div class="form-group col-xs-12">
             <div class="styling-input-list">
@@ -74,52 +104,17 @@
                 <label class="focus-effect-for-input" aria-hidden="true">Reminder Text</label>
             </div>
         </div>
-        <div class="form-group col-xs-12">
-            <div class=" styling-input-list">
-                <input type="file" class="form-control custom-form-control" multiple ng-model="job.file"
-                       ngf-select>
-            </div>
-        </div>
-        <div class="form-group col-xs-12">
+
+        <!--<div class="form-group col-xs-12">
             <div ng-repeat="attch in job.attachments">
                 <span class="cursor-pointer" ng-click="viewAttachment(attch.key)">{{attch.fileName}}</span>
                 <button class="btn btn-danger btn-xs" ng-click="deleteImage(attch.key,$index);">x
                 </button>
             </div>
-        </div>
+        </div>-->
+        <custom-file-upload bind="file"></custom-file-upload>
     </div>
-    <div ng-if="records.length > 0">
-        <div class="col-sm-6 col-xs-12 mt-10">
-            <div class="col-xs-12 pall-zero mb-10">
-                <h2 class="table-name">Records:</h2>
-            </div>
-            <div class="mt-10">
-                <table class="table table-bordered table-striped table-condensed table-hover"
-                       ng-table="studentParams">
-                    <tr ng-repeat="record in records " style="text-align: center;">
-                        <td data-title="'Vehicle'"  class="clickable-item">
-                            {{job.vehicle.registrationNo}}
-                        </td>
-                        <td data-title="'Last Job Date'" class="clickable-item">
-                            {{record.date | date:'dd-MM-y'}}
-                        </td>
-                        <td data-title="'Inventory'" class="clickable-item">
-                            {{record.inventory.name}}
-                        </td>
-                        <td data-title="'milege'" class="clickable-item">
-                            {{record.milege}}
-                        </td>
-                        <td data-title="'Job Type'" class="clickable-item">
-                            {{record.type.jobName}}
-                        </td>
-                    </tr>
-                    <tr ng-if="!records || records === 0">
-                        <td colspan="10">No Records exist.</td>
-                    </tr>
-                </table>
-            </div>
-        </div>
-    </div>
+
     <div class="col-xs-12">
         <div class="col-xs-4 mtb-25 sub-can">
             <button type="submit" class="btn can" ng-click="cancel()">Cancel</button>
