--- a/client/views/partials/userProfile/myProfile.html
+++ b/client/views/partials/userProfile/myProfile.html
@@ -21,7 +21,7 @@
 
                     <div class="profile-right col-sm-10">
                         <div class="col-sm-6">
-                            <div class="form-group form-group-custom">
+                            <!--<div class="form-group form-group-custom">
                                 <div class="styling-input-list">
                                     <input type="text" name="userName" id="userName" readonly
                                            ng-model="account.profile.userName"
@@ -30,7 +30,6 @@
                                 </div>
                                 <div class="clearfix"></div>
                             </div>
-
                             <div class="form-group form-group-custom">
                                 <div class="styling-input-list">
                                     <input type="text" name="mobile" id="mobile"
@@ -39,8 +38,90 @@
                                     <label class="focus-effect-for-input" aria-hidden="true">Mobile</label>
                                 </div>
                                 <div class="clearfix"></div>
+                            </div>-->
+                            <div class="form-group form-group-custom">
+                                <div class="styling-input-list">
+                                    <input type="text" name="address1"
+                                           ng-model="account.profile.address1"
+                                           class="form-control custom-form-control"/>
+                                    <label class="focus-effect-for-input" aria-hidden="true">Address Line1</label>
+                                </div>
+                                <div class="clearfix"></div>
+                            </div>
+                            <div class="form-group form-group-custom">
+                                <div class="styling-input-list">
+                                    <input type="text"  name="address1"
+                                           ng-model="account.profile.address2"
+                                           class="form-control custom-form-control"/>
+                                    <label class="focus-effect-for-input" aria-hidden="true">Address Line2</label>
+                                </div>
+                                <div class="clearfix"></div>
+                            </div>
+                            <div class="form-group form-group-custom">
+                                <div class="styling-input-list">
+                                    <input type="text"  name="city"
+                                           ng-model="account.profile.city"
+                                           class="form-control custom-form-control"/>
+                                    <label class="focus-effect-for-input" aria-hidden="true">City</label>
+                                </div>
+                                <div class="clearfix"></div>
+                            </div>
+                            <div class="form-group form-group-custom">
+                                <div class="styling-input-list">
+                                        <div class=" pos-relative">
+                                            <span class="bot-arrow">
+                                                <i class="fa fa-angle-down" aria-hidden="true"></i>
+                                            </span>
+                                            <select class="form-control custom-form-control" ng-model="account.profile.state">
+                                                <option value="" selected>Select State</option>
+                                                <option ng-repeat="e in states" value="{{e}}">{{e}}</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                <div class="clearfix"></div>
                             </div>
 
+                            <div class="form-group form-group-custom">
+                                <div class="styling-input-list">
+                                    <input type="text"  name="country"
+                                           ng-model="account.profile.country"
+                                           class="form-control custom-form-control"/>
+                                    <label class="focus-effect-for-input" aria-hidden="true">Country</label>
+                                </div>
+                                <div class="clearfix"></div>
+                            </div>
+
+                            <div class="form-group form-group-custom">
+                                <div class="styling-input-list">
+                                    <input type="text"  name="country"
+                                           ng-model="account.profile.ZipCode"
+                                           class="form-control custom-form-control"/>
+                                    <label class="focus-effect-for-input" aria-hidden="true">Zip Code</label>
+                                </div>
+                                <div class="clearfix"></div>
+                            </div>
+
+                        </div>
+
+                        <div class="col-sm-6">
+                            <div class="form-group form-group-custom">
+                                <div class="styling-input-list">
+                                    <input type="text"  name="gst"
+                                           ng-model="account.profile.GST"
+                                           class="form-control custom-form-control"/>
+                                    <label class="focus-effect-for-input" aria-hidden="true">GST</label>
+                                </div>
+                                <div class="clearfix"></div>
+                            </div>
+                            <div class="form-group form-group-custom">
+                                <div class="styling-input-list">
+                                    <input type="text"  name="country"
+                                           ng-model="account.profile.GSTRate"
+                                           class="form-control custom-form-control"/>
+                                    <label class="focus-effect-for-input" aria-hidden="true">GST Rate</label>
+                                </div>
+                                <div class="clearfix"></div>
+                            </div>
                             <div class="form-group form-group-custom">
                                 <div class="styling-input-list">
                                     <input type="text" name="email" id="email" ng-model="account.profile.email"
@@ -49,9 +130,6 @@
                                 </div>
                                 <div class="clearfix"></div>
                             </div>
-                        </div>
-
-                        <div class="col-sm-6">
                             <div class="form-group form-group-custom">
                                 <div class="styling-input-list">
                                     <input type="text" name="totalGroups" id="totalGroups" readonly
