--- a/client/views/partials/reminders/addReminder.html
+++ b/client/views/partials/reminders/addReminder.html
@@ -1,4 +1,4 @@
-<div class="main-right col-xs-12" ng-controller="remindersCtrl">
+< class="main-right col-xs-12" ng-controller="remindersCtrl">
     <h2 class="title-name ">{{title}}</h2>
     <div class="col-sm-6 col-xs-12 mt-10">
         <div class="form-group col-xs-12">
@@ -36,7 +36,7 @@
         </div>
 
     </div>
-    <div ng-if="reminder.vehicle">
+    <span ng-if="reminder.vehicle">
         <div class="col-sm-6 col-xs-12 mt-10">
             <div class="col-xs-12 pall-zero mb-10">
                 <h2 class="table-name">Job Details:</h2>
@@ -53,12 +53,12 @@
                     </tr>
                     <tr style="text-align: center;">
                         <td>Milage</td>
-                        <td>{{reminder.refId.milege}}</td>
+                        <td>{{reminder.refId.milege || '--'}}</td>
                     </tr>
                 </table>
             </div>
         </div>
-    </div>
+    </span>>
     <div class="col-xs-12">
         <div class="col-xs-4 mtb-25 sub-can">
             <button type="submit" class="btn can" ng-click="cancel()">Cancel</button>
