--- a/client/views/partials/reminders/addReminder.html
+++ b/client/views/partials/reminders/addReminder.html
@@ -1,4 +1,4 @@
-< class="main-right col-xs-12" ng-controller="remindersCtrl">
+<div class="main-right col-xs-12" ng-controller="remindersCtrl">
     <h2 class="title-name ">{{title}}</h2>
     <div class="col-sm-6 col-xs-12 mt-10">
         <div class="form-group col-xs-12">
