custom file upload completd

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -214,6 +214,7 @@
 <script src="dist/js/app.min.js"></script>
 <script src="js/lib/bundles/ng-table.js"></script>
 <script src="js/slick.js"></script>
+<script src="js/directives/fileUpload.js"></script>
 
 <!--controllers-->
 <script src="dist/js/main.min.js"></script>
