--- a/client/views/partials/trips/tripsEdit.html
+++ b/client/views/partials/trips/tripsEdit.html
@@ -91,13 +91,13 @@
                     <h2 class="inner-title">File Attachments</h2>
                     <div class="form-group col-xs-12">
                         <div class=" styling-input-list">
-                            <input type="file" class="form-control custom-form-control" multiple ng-model="files"
-                                   ngf-select>
+                            <customized-file-upload ng-model="files" folder="'trips'"
+                                                    class="'custom-form-control'" >
+                            </customized-file-upload>
                         </div>
                     </div>
                     <div class="form-group col-xs-12">
-                        csdcs
-                        <multi-file-upload></multi-file-upload>
+
                         <div ng-repeat="attch in trip.attachments">
                             <span class="cursor-pointer" ng-click="viewAttachment(attch.key)">{{attch.fileName}}</span>
                             <button class="btn btn-danger btn-xs" ng-click="deleteTripImage(attch.key,$index);">x
