invoice api added

--- a/client/views/partials/trips/tripsList.html
+++ b/client/views/partials/trips/tripsList.html
@@ -80,6 +80,11 @@
 
                     <span class="glyphicon glyphicon-remove"></span>
                 </a>
+                <a href="#" ng-show="userType=='account' || userId==trips.createdBy" class="btn"
+                   ng-click="printInvoice(trips._id,trips.partyId)">
+
+                    <i class="fa fa-file-pdf-o" aria-hidden="true"></i>
+                </a>
             </td>
         </tr>
         <tr ng-if="!currentPageOfTrips || currentPageOfTrips.length === 0">
@@ -92,5 +97,48 @@
         </figure>
     </div>
 
+    <div class="print-invoice">
+        <head>
+            <title>Easygaadi Invoice</title>
+            <style>
+                table {
+                    border-collapse: collapse;
+                    text-align: center;
+                    width: 100%;
+                }
 
+                table, td, th {
+                    padding: 2px 0px;
+                    border: 1px solid black;
+                }
+            </style>
+        </head>
+        <body>
+        <div class="logo"></div>
+        <div class="container">
+            <table>
+                <tr>
+                    <td colspan="2"><h2>{{print.accDetails.userName}}</h2></td>
+                </tr>
+                <tr>
+                    <td colspan="2"><i class="fa fa-map-marker" aria-hidden="true"></i>
+                        {{print.accDetails.address1}},{{print.accDetails.address2}},
+                    </td>
+                    <td>
+                        <i class="fa fa-phone" aria-hidden="true"></i>{{print.accDetails.contactPhone}}
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2">Invoice for trip details</td>
+                </tr>
+                <tr>
+                    <td>GST No:{{print.accDetails.GST}}</td>
+                    <td>GST Rate:{{print.accDetails.GSTRate}}</td>
+                </tr>
+            </table>
+
+        </div>
+        </body>
+
+    </div>
 </div>
