--- a/client/views/partials/party/edit-party.html
+++ b/client/views/partials/party/edit-party.html
@@ -35,6 +35,14 @@
 
                     </div>
                 </div>
+                <div class="form-group col-xs-12">
+                    <div class="styling-input-list">
+                        <input ng-model="party.gstNo" type="text" class="form-control custom-form-control" id="gstNo"
+                              >
+                        <label class="focus-effect-for-input" aria-hidden="true">GST No</label>
+
+                    </div>
+                </div>
                 <div class="col-xs-12 pall-zero">
                     <div class="form-group sms-email col-xs-12">
                         <div class="sms col-xs-4">
