--- a/client/views/partials/Jobs/add_editJob.html
+++ b/client/views/partials/Jobs/add_editJob.html
@@ -49,7 +49,7 @@
                         </span>
                 <select class="form-control custom-form-control" ng-model="job.type">
                     <option value="" selected>Select Job Type</option>
-                    <option ng-repeat="e in expenses" value="{{e._id}}">{{e.jobName}}</option>
+                    <option ng-repeat="e in expenses" value="{{e._id}}">{{e.expenseName}}</option>
                     <option value="others">Others</option>
                 </select>
             </div>
@@ -57,7 +57,7 @@
         <div ng-show="job.type=='others'">
             <div class="form-group col-xs-12">
                 <div class="">
-                    <input type="text" ng-model="job.jobName"
+                    <input type="text" ng-model="job.expenseName"
                            class="form-control custom-form-control" id="name" placeholder="Job Type">
                 </div>
             </div>
@@ -83,7 +83,7 @@
                                 {{record.milege}}
                             </td>
                             <td data-title="'Job Type'" class="clickable-item">
-                                {{record.type.jobName}}
+                                {{record.type.expenseName}}
                             </td>
                         </tr>
                         <tr ng-if="!records.length || records.length === 0">
@@ -111,6 +111,12 @@
             </div>
         </div>
         <div class="form-group col-xs-12">
+            <div class=" styling-input-list">
+                <input type="file" class="form-control custom-form-control" multiple ng-model="job.file"
+                       ngf-select>
+            </div>
+        </div>
+        <div class="form-group col-xs-12">
             <div ng-repeat="attch in job.attachments">
                 <span class="cursor-pointer" ng-click="viewAttachment(attch.key)">{{attch.fileName}}</span>
                 <button class="btn btn-danger btn-xs" ng-click="deleteImage(attch.key,$index);">x
@@ -135,7 +141,7 @@
                             {{record.milege}}
                         </td>
                         <td data-title="'Job Type'" class="clickable-item">
-                            {{record.type.jobName}}
+                            {{record.type.expenseName}}
                         </td>
                     </tr>
                     <tr ng-if="!jobsForInventory.length || jobsForInventory.length === 0">
