share tracking completed

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -857,6 +857,9 @@ disabled look for disabled choices in the results dropdown
 .margin-top-40 {
     margin-top: 40px;
 }
+.margin-top-120 {
+    margin-top: 120px;
+}
 
 .margin-top-10 {
     margin-top: 10px;
