--- a/client/views/partials/gps/trackView.html
+++ b/client/views/partials/gps/trackView.html
@@ -1,4 +1,4 @@
-<div class="col-xs-12 gpsListView" ng-controller="TruckTrackingController">
+<div class="col-xs-12 gpsListView" ng-controller="TruckTrackingController" ng-init="loadData()">
     <div class="">
         <div class="lisk-block col-xs-12">
             <div class="col-xs-12">
