added google short url

--- a/client/views/partials/gps/listView.html
+++ b/client/views/partials/gps/listView.html
@@ -71,7 +71,7 @@
     <!--<a href="#" class="btn btn-primary" ui-sref="services.gpsDevices"> Cancel</a>-->
     <!--<a href="#" class="btn btn-primary" ng-click="transferDevices()"> Submit</a>-->
     <div class="modal-header">
-        <h3 class="modal-title" id="modal-title">Transfer Devices</h3>
+        <h3 class="modal-title" id="modal-title">Share truck tracking</h3>
     </div>
     <div class="modal-body" id="modal-body">
         <div class="row">
